--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,9 @@
 	<title>Hello Redux</title>
 </head>
 <body>
-	<div class="app">
+	<div id="app">
 		
 	</div>
 	<script src="bundle.js"></script>
-	<h1>Hello first redux app</h1>
 </body>
 </html>
